@@ -103,6 +103,11 @@ Note: This is a change to what is displayed and the entries are not updated to p
 <td>Custom special symbol set now handled correctly in Generate Password dialog box.</td>
 </tr>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3518389);return false;">3518389</a></td>
+<td>All date/time fields in the List view are now displayed using the user's
+"short date" format as specified via the Windows Control Panel "Region and Language" tab.</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3515692);return false;">3515692</a></td>
 <td>Fixed crash with Generate Password switching to default policy with > 1 named policy.</td>
 </tr>
